--- a/site/site1/assets/css/header.css
+++ b/site/site1/assets/css/header.css
@@ -49,7 +49,6 @@
 }
 .header__menu li a{
     padding: 13px 10px;
-    margin: 0 5px;
     transition: background-color 0.3s;
 }
 .header__menu li a:hover{
@@ -93,9 +92,10 @@
 }
 .header__menu__media::-webkit-scrollbar-track{}
 
-@media (max-width: 1150px){
+@media (max-width: 1220px){
     .header__inner{
         padding: 0 50px;
+        position: static;
     }
     .header__menu{
         display: none;
@@ -110,13 +110,13 @@
         text-align: center;
         overflow: scroll hidden;
         white-space: nowrap;
-        margin-top: 70px;
+        margin-top: 0px;
         position: fixed;
         background: rgba(255, 255, 255, 0.637);
         backdrop-filter: blur(15px);
         -webkit-backdrop-filter: blur(15px);
         z-index: 1000;
-        height: 55px;
+        height: 43px;
         padding-top: 20px;
         position: sticky;
         top: 0;
