--- a/site/site1/assets/css/image.css
+++ b/site/site1/assets/css/image.css
@@ -61,6 +61,10 @@
     }
     .image__inner{
         flex-wrap: wrap;
+        padding: 10px;
+    }
+    .image__title{
+        font-size: 24px;
     }
 }
 
