--- a/site/site1/assets/css/slider.css
+++ b/site/site1/assets/css/slider.css
@@ -105,7 +105,7 @@
     background-color: rgba(255, 255, 255, 0.537);
     backdrop-filter: blur(15px);
     -webkit-backdrop-filter: blur(15px);
-    padding: 11px 50px;
+    padding: 11px 30px;
     display: inline-block;
     border-radius: 5px;
     border: 1px solid rgba(255, 255, 255, 0.48);
@@ -168,8 +168,102 @@
     position: relative;
 }
 
+.swiper-slide{
+    background: url(../img/slider_bg01.jpg) no-repeat center / cover;
+    height: 500px;
+}
+
+.swiper-slide .desc {
+    /* width: 1160px; */
+    /* margin: 0 auto; */
+    padding: 100px;
+    text-align: center;
+}
+.swiper-slide .desc span {
+    font-size: 16px;
+    background-color: #ffffff17;
+    padding: 7px 10px;
+    text-transform: uppercase;
+    margin-bottom: 10px;
+    display: inline-block;
+    backdrop-filter: blur(15px);
+    -webkit-backdrop-filter: blur(15px);
+    border-top: 1px solid #fff;
+    border-bottom: 1px solid #fff;
+    color: #fff;
+}
+.swiper-slide .desc h3 {
+    font-size: 90px;
+    font-weight: bold;
+    line-height: 1;
+    color: #fff;
+    text-transform: uppercase;
+    margin-bottom: 16px;
+    margin-left: -8px;
+    margin-top: 20px;
+}
+.swiper-slide .desc p {
+    font-size: 20px;
+    font-weight: 300;
+    color: #fff;
+    line-height: 1.35;
+    margin-bottom: 80px;
+}
+
+.swiper-slide .desc .btn {}
+.swiper-slide .desc .btn a {
+    font-size: 16px;
+    background-color: rgba(255, 255, 255, 0.537);
+    backdrop-filter: blur(15px);
+    -webkit-backdrop-filter: blur(15px);
+    padding: 11px 30px;
+    display: inline-block;
+    border-radius: 5px;
+    border: 1px solid rgba(255, 255, 255, 0.48);
+}
+.swiper-slide .desc .btn a.black {
+    background: rgba(0, 0, 0, 0.457);
+    color: #fff;
+}
+
+.swiper-pagination-bullet{
+    /* display: inline-block; */
+    width: 16px;
+    height: 16px;
+    background-image: url(../img/slider_icon.svg);
+    background-position: -20px -70px;
+    opacity: 1;
+    background-color: #000 !important;
+}
+.swiper-pagination-bullet-active{
+    background-position: 0px 70px !important;
+}
+
+/* media */
 @media (max-width: 920px){
     .slider__img .desc h3{
         font-size: 50px;
     }
+}
+@media (max-width: 960px){
+    .swiper-slide .desc p{
+        margin-bottom: 60px;
+        font-size: 16px;
+    }
+    .swiper-slide{
+        text-align: center;
+    }
+    .swiper-slide .desc h3{
+        font-size: 60px;
+    }
+    .swiper-slide .desc{
+    width: 100%;
+    padding: 0;
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    }
+
 }
