--- a/site/site1/assets/css/header.css
+++ b/site/site1/assets/css/header.css
@@ -1,13 +1,4 @@
-/* headerType */
-.media{
-    display: none;
-}
-
-.inline{
-    display: inline !important;
-}
-
-.header__inner{
+.header__inner {
     width: 100%;
     height: 70px;
     display: flex;
@@ -19,128 +10,122 @@
     position: fixed;
     left: 0;
     top: 0;
-    background: rgba(255, 255, 255, 0.637);
-    z-index: 100;
-    backdrop-filter: blur(15px);
-    -webkit-backdrop-filter: blur(15px);
-    border-bottom: 1px solid rgba(255, 255, 255, 0.494);
-    white-space: nowrap;
+    z-index: 10000;
+    background: #fff;
 }
-
-.header__logo{
-    width: 10%;
+.header__logo {
+    width: 20%;
     font-size: 30px;
     font-weight: 700;
     text-transform: uppercase;
 }
-
-.header__logo em{
+.header__logo em {
     font-size: 18px;
     font-weight: 400;
 }
-.header__menu{
-    width: 80%;
+.header__menu {
+    width: 60%;
     text-align: center;
-    /* overflow-x: scroll;
-    overflow-y: hidden; */
 }
-.header__menu li{
+.header__menu li {
     display: inline;
 }
-.header__menu li a{
-    padding: 13px 10px;
+.header__menu li a {
+    padding: 13px 3px;
+    margin: 0 5px;
     transition: background-color 0.3s;
 }
-.header__menu li a:hover{
-    background-color: #f1f1f1;
+.header__menu li a:hover {
+    background-color: #F1F1F1;
     border-radius: 5px;
 }
-.header__menu__media{
-    display: none;
-}
-.header__member{
-    width: 10%;
+.header__member {
+    width: 20%;
     text-align: right;
 }
-.header__member a{
+.header__member a {
     font-size: 16px;
     border: 1px solid #000;
     padding: 10px 30px;
     border-radius: 50px;
-    transition: all 0.25s;
+    transition: all 0.3s;
 }
-
-.header__member a:hover{
+.header__member a:hover {
     background-color: #000;
     color: #fff;
 }
-
-#header_logo_media{
-    font-size: 20px;
-    padding: 0 20px;
-    margin-right: 20px;
-    border-right: 1px solid #00000047;
+.header__ham {
+    position: absolute;
+    right: 10px;
+    top: 10px;
+    z-index: 1000;
+    width: 50px;
+    height: 50px;
+    display: none;
+    cursor: pointer;
 }
-.header__menu__media::-webkit-scrollbar{
-    height: 4px;
-    margin-bottom: 2px;
-    background-color: rgba(255, 255, 255, 0.494);
+.header__ham span {
+    display: block;
+    background: #000;
+    width: 30px;
+    height: 2px;
+    border-radius: 3px;
+    margin-left: 10px;
+    margin-top: 5px;
+    transition: 0.25s margin 0.25s, 0.25s transform;
 }
-.header__menu__media::-webkit-scrollbar-button{}
-.header__menu__media::-webkit-scrollbar-thumb{
-    background-color: rgb(255 168 18);
+.header__ham span:nth-child(1){
+    margin-top: 18px;
 }
-.header__menu__media::-webkit-scrollbar-track{}
-
-@media (max-width: 1220px){
-    .header__inner{
-        padding: 0 50px;
-        position: static;
-    }
-    .header__menu{
-        display: none;
-    }
-    .header__logo{
-        margin: 0 auto;
-        text-align: center;
-    }
-    .header__menu__media{
-        display: block;
-        width: 100%;
-        text-align: center;
-        overflow: scroll hidden;
-        white-space: nowrap;
-        margin-top: 0px;
+.header__ham.active span {
+    transition: 0.25s margin, 0.25s transform 0.25s;
+}
+.header__ham.active span:nth-child(1){
+    margin-top: 25px;
+    margin-bottom: -7px;
+    transform: rotate(45deg);
+}
+.header__ham.active span:nth-child(2){
+    transform: rotate(45deg);
+}
+.header__ham.active span:nth-child(3){
+    margin-top: -2px;
+    transform: rotate(135deg);
+}
+/* media */
+@media (max-width: 1300px){
+    .header__menu {
         position: fixed;
-        background: rgba(255, 255, 255, 0.637);
-        backdrop-filter: blur(15px);
-        -webkit-backdrop-filter: blur(15px);
-        z-index: 1000;
-        height: 43px;
-        padding-top: 20px;
-        position: sticky;
-        top: 0;
+        right: -100%;
+        top: 69px;
+        background: #fff;
+        width: 60%;
+        height: 100vh;
+        padding: 20px;
+        text-align: right;
+        transition: right 0.4s ease-in;
     }
-    .header__menu__media li{
-        display: inline;
+    .header__menu ul li {
+        display: block;
+        margin: 20px;
     }
-    .header__menu__media li a{
-        padding: 13px 30px;
-        margin: 0 5px;
-        transition: background-color 0.3s;
+    .header__menu ul li a {
+        padding: 10px;
+        white-space: nowrap;
     }
-}
-
-@media (max-width: 750px){
-    .header__inner{
-        /* padding: 0 100px; */
-        justify-content: space-between;
+    .header__menu.active {
+        right: 0;
     }
-    .header__logo{
-        width: 20%;
-        margin: 0;
+    .header__member {
+        margin-right: 50px;
     }
-    .header__member{
-        width: 20%;
+    .header__ham {
+        display: block;
+    }
+    .header__logo {
+        width: 50%;
+    }
+    .header__member {
+        width: 50%;
     }
 }
