--- a/site/site1/assets/css/slider.css
+++ b/site/site1/assets/css/slider.css
@@ -167,10 +167,40 @@
 .slider{
     position: relative;
 }
+.swiper-button{
+    position: absolute;
+    left: 50%;
+    bottom: 24px;
+    z-index: 1000;
+    margin-left: 40px;
+}
+.swiper-button-stop{
+    background-image: url(../img/slider_icon.svg);
+    background-position: -40px -70px;
+    width: 16px;
+    height: 16px;
+    cursor: pointer;
+}
+.swiper-button-play{
+    background-image: url(../img/slider_icon.svg);
+    background-position: -60px -70px;
+    width: 16px;
+    height: 16px;
+    cursor: pointer;
+    display: none;
+}
 
 .swiper-slide{
     background: url(../img/slider_bg01.jpg) no-repeat center / cover;
     height: 500px;
+}
+
+.swiper-slide:nth-child(2){
+    background: url(../img/slider_bg02.jpg) no-repeat center / cover;
+}
+
+.swiper-slide:nth-child(3){
+    background: url(../img/slider_bg03.jpg) no-repeat center / cover;
 }
 
 .swiper-slide .desc {
@@ -207,7 +237,7 @@
     font-weight: 300;
     color: #fff;
     line-height: 1.35;
-    margin-bottom: 80px;
+    margin-bottom: 20px;
 }
 
 .swiper-slide .desc .btn {}
