--- a/site/site2/assets/css/slider.css
+++ b/site/site2/assets/css/slider.css
@@ -1,5 +1,9 @@
+#sliderType{
+  padding: 0 30px;
+}
+
 .slider__inner {
-  margin-top: 120px;
+  margin-top: 135px;
   position: relative;
   overflow: hidden;
 }
@@ -210,7 +214,7 @@
 
 .swiper-slide {
   background: url(../img/slider_bg01.jpg) no-repeat center / cover;
-  height: 960px;
+  height: 820px;
 }
 
 .swiper-slide:nth-child(2) {
