--- a/site/site2/assets/css/common.css
+++ b/site/site2/assets/css/common.css
@@ -34,16 +34,16 @@ body.fixed{
     padding: 13px 0px;
     border: 0.5px solid #fff;
     /* background-color: #37536b36; */
-    border-radius: 5px;
+    /* border-radius: 5px; */
     color: #000 !important;
 }
 .actived::after{
     content: '';
     position: absolute;
     width: 24px;
-    height: 4px;
-    background: #000;
-    bottom: 0;
+    height: 2px;
+    background: #fff;
+    bottom: 4px;
     left: 50%;
     border-radius: 50px;
     transform: translate(-50%, -50%);
