--- a/site/site2/assets/css/slider.css
+++ b/site/site2/assets/css/slider.css
@@ -1,9 +1,18 @@
 #sliderType{
-  padding: 0 30px;
+  /* padding: 0 30px; */
 }
 
+.bg_dim{
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: url(../img/bg_dim.png) repeat;
+  z-index: 10;
+}
 .slider__inner {
-  margin-top: 135px;
+  /* margin-top: 20px; */
   position: relative;
   overflow: hidden;
 }
@@ -76,11 +85,10 @@
 .slider__inner .desc_sub{
   position: absolute;
   top: 100px;
-  right: 100px;
+  left: 50px;
   background: rgb(255 255 255);
-  color: #413c1d;
+  color: #24356c;
   z-index: 2;
-  backdrop-filter: blur(5px);
   padding: 13px;
   /* border: 1px solid #fff; */
   font-size: 40px;
@@ -187,14 +195,14 @@
 }
 .swiper-button {
   position: absolute;
-  right: 100px;
-  bottom: 100px;
+  right: 76px;
+  bottom: 38px;
   z-index: 1000;
   /* margin-left: 40px; */
-  border: 1px solid rgba(255, 255, 255, 0.292);
+  /* border: 1px solid rgba(255, 255, 255, 0.292); */
   padding: 34px 35.8px;
-  background: rgba(255, 255, 255, 0);
-  backdrop-filter: blur(15px);
+  /* background: rgba(255, 255, 255, 0); */
+  /* backdrop-filter: blur(15px); */
 }
 .swiper-button-stop {
   background-image: url(../img/slider_icon.svg);
@@ -212,9 +220,9 @@
   display: none;
 }
 
-.swiper-slide {
+.swiper-slide { /*슬라이드 전체높이*/
   background: url(../img/slider_bg01.jpg) no-repeat center / cover;
-  height: 820px;
+  height: 100vh;
 }
 
 .swiper-slide:nth-child(2) {
@@ -281,8 +289,8 @@
 
 .swiper-pagination-bullet {
   /* display: inline-block; */
-  width: 90px;
-  height: 5px;
+  width: 20px; /*90*/
+  height: 20px; /*5*/
   /* background-image: url(../img/slider_icon.svg); */
   background-position: -20px -70px;
   opacity: 1;
@@ -333,38 +341,38 @@
   position: absolute;
   z-index: 2;
   /* text-shadow: 0px 4px #00000033; */
-  bottom: 100px;
-  left: 100px;
+  bottom: 50px;
+  left: 50px;
 }
 .slider__inner .desc span {
-  font-size: 16px;
-  background-color: #ffffff17;
-  padding: 7px 10px;
-  text-transform: uppercase;
-  margin-bottom: 10px;
+  font-size: 30px;
+  /* background-color: #ffffff17; */
   display: inline-block;
-  backdrop-filter: blur(15px);
+  text-transform: uppercase;
+  color: #fff;
+  /* padding: 7px 10px; */
+  margin-bottom: 10px;
+  /* backdrop-filter: blur(15px);
   -webkit-backdrop-filter: blur(15px);
   border-top: 1px solid #fff;
-  border-bottom: 1px solid #fff;
-  color: #fff;
+  border-bottom: 1px solid #fff; */
 }
 .slider__inner .desc h3 {
   font-size: 110px;
-  font-weight: normal;
+  font-weight: bold;
   line-height: 1;
   color: #fff;
   text-transform: uppercase;
   margin-bottom: 10px;
   /* margin-left: -8px; */
-  margin-top: 10px;
+  /* margin-top: 10px; */
 }
 .slider__inner .desc p {
   font-size: 50px;
   font-weight: 300;
   color: #fff;
   line-height: 1.35;
-  margin-bottom: 20px;
+  margin-bottom: 60px;
 }
 
 .slider__inner .desc .btn {
@@ -382,8 +390,15 @@
   text-align: center;
 }
 .slider__inner .desc .btn a.black {
-  background: rgba(0, 0, 0, 0.457);
-  color: #fff;
+  background: rgb(255 255 255);
+  color: #000;
+}
+
+.button_cont{
+  position: absolute;
+  width: 146px;
+  bottom: 85px;
+  right: 50px;
 }
 
 section#sliderType:not(:hover) .hover_icon,
@@ -416,16 +431,24 @@ section#sliderType:hover .hover_icon {
   display: none;
 }
 
-.swiper-button:hover{
+/* .swiper-button:hover{
   transform: translateY(-10px);
   transition: 0.25s;
   box-shadow: 0px 20px 30px 5px #00000080;
-}
+} */
 .swiper-button:not(:hover){transition: 0.25s;}
+.scroll_here{
+  width: 25px;
+  position: absolute;
+  bottom: 50px;
+  left: 50%;
+  z-index: 2;
+  transform: translate(-50%, 0);
+}
 
 @media (max-width: 1300px) {
   .slider__inner {
-    margin-top: 75px;
+    /* margin-top: 75px; */
   }
   .hover_icon{
     display: none;
