--- a/layout/layout02_flex.html
+++ b/layout/layout02_flex.html
@@ -36,7 +36,15 @@
         }
         #section{
             width: 60%;
-            height: 780px;
+        }
+        #section_cont{
+            width: 100%;
+            height: 390px;
+            background-color: #407943;
+        }
+        #section_cont2{
+            width: 100%;
+            height: 390px;
             background-color: #66BB6A;
         }
         #article{
@@ -97,7 +105,10 @@
     <div id="wrap">
         <div id="header"></div>
         <div id="aside"></div>
-        <div id="section"></div>
+        <div id="section">
+            <div id="section_cont"></div>
+            <div id="section_cont2"></div>
+        </div>
         <div id="article"></div>
         <div id="footer"></div>
     </div>
