--- a/layout/layout03_flex.html
+++ b/layout/layout03_flex.html
@@ -40,7 +40,18 @@
         #article1{
             width: 70%;
             height: 260px;
+            display: flex;
+            /* background-color: #29b6f6; */
+        }
+        #article1-1{
+            width: 50%;
+            height: 100%;
             background-color: #29b6f6;
+        }
+        #article1-2{
+            width: 50%;
+            height: 100%;
+            background-color: #0597da;
         }
         #article2-1{
             width: 100%;
@@ -110,7 +121,10 @@
         <div id="header"></div>
         <div id="main">
             <div id="aside"></div>
-            <div id="article1"></div>
+            <div id="article1">
+                <div id="article1-1"></div>
+                <div id="article1-2"></div>
+            </div>
             <div id="article2">
                 <div id="article2-1"></div>
                 <div id="article2-2"></div>
