--- a/layout/layout01_float.html
+++ b/layout/layout01_float.html
@@ -29,6 +29,7 @@
             height: 100px;
             background-color: #ffcc80;
         }
+        
         #aside {
             width: 30%;
             height: 780px;
@@ -37,10 +38,17 @@
         }
         #section {
             width: 70%;
-            height: 780px;
+            height: 390px;
             background-color: #ffa726;
             float: left;
         }
+        #section_sub {
+            width: 70%;
+            height: 390px;
+            background-color: #ffa726;
+            float: left;
+        }
+        
         #footer {
             width: 100%;
             height: 100px;
@@ -89,6 +97,7 @@
         <div id="nav"></div>
         <div id="aside"></div>
         <div id="section"></div>
+        <div id="section_sub"></div>
         <div id="footer"></div>
     </div>
 </body>
