--- a/javascript/assets/css/music.css
+++ b/javascript/assets/css/music.css
@@ -214,6 +214,7 @@ img.two{
 .music__list{
     padding: 20px;
     box-shadow: 0px 15px 20px 10px #1a1c3e85;
+    display: none;
 }
 .music__list h3{
     font-size: 20px;
@@ -288,4 +289,14 @@ img.two{
     transform: translate(0, -50%);
     color: #5b5a7284;
     font-size: 14px;
+}
+
+.sourceOpen{
+    display: none;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 11;
 }
