--- a/javascript/assets/css/music.css
+++ b/javascript/assets/css/music.css
@@ -1,4 +1,5 @@
 .music__wrap {
+    display: none;
 }
 .music__inner {
     width: 450px;
@@ -8,7 +9,7 @@
     right: 100px;
     top: 100px;
     padding: 26px;
-    padding-top: 10px;
+    /* padding-top: 10px; */
     box-shadow: 0px 5px 26px 5px #300e504a;
     overflow: hidden;
 }
@@ -30,13 +31,18 @@
     justify-content: space-between;
     color: #fff;
 }
+.music__header img{
+    width: 20px;
+    filter: invert(1);
+    transition: transform 0.25s;
+}
 .music__header h2 {
     font-size: 14px;
 }
 .music__contents {
     /* background: #dfe0e6; */
     width: 100%;
-    margin-bottom: 20px;
+    /* margin-bottom: 20px; */
 }
 .music__view {
     display: flex;
@@ -291,12 +297,120 @@ img.two{
     font-size: 14px;
 }
 
-.sourceOpen{
+.sourceCont{
     display: none;
-    width: 100%;
-    height: 100%;
+    width: 50vw;
+    height: 50vh;
     position: absolute;
-    top: 0;
-    left: 0;
+    top: 25%;
+    left: 25%;
     z-index: 11;
 }
+.sourceCont_header{
+    background: rgba(71, 42, 177, 0.796);
+    width: 100%;
+    height: 40px;
+    backdrop-filter: blur(7px);
+    -webkit-backdrop-filter: blur(7px);
+    display: flex;
+    justify-content: space-between;
+    padding: 0 20px;
+    align-items: center;
+    color: #fff;
+}
+.sourceCont_header img{
+    filter: invert(1);
+    width: 22px;
+}
+.sourceOpen{
+    width: 100%;
+    height: 100%;
+}
+
+.volumeCont{
+    position: absolute;
+    background: #342c4a8f;
+    padding: 10px 10px 6px 10px;
+    z-index: 1000;
+    backdrop-filter: blur(19px);
+    top: 23px;
+    left: 50%;
+    transform: translate(-50%, -100px);
+    border: 1px solid #ffffff2b;
+    /* display: none; */
+    transition: transform 0.25s;
+}
+.volumeCont::after{content: '0'; left: 10px;}
+.volumeCont::before{content: '100'; right: 10px;}
+.volumeCont::before,
+.volumeCont::after{
+    /* font-family: 'gothic'; */
+    /* text-align: center; */
+    /* width: 100%; */
+    font-size: 12px;
+    color: rgb(255, 255, 255);
+    font-weight: lighter;
+    position: absolute;
+    top: 40px;
+    
+}
+/* input[type=range] {
+    -webkit-appearance: none; 
+    width: 100%; 
+    height: 1px;
+    background: #ffffff45; 
+    cursor: pointer;
+    transition: background 450ms ease-in;
+  }
+
+  input[type=range]:focus {
+    outline: none; 
+  }
+
+  input[type=range]::-webkit-slider-thumb{
+    -webkit-appearance: none;
+    width: 10px;
+    height: 10px;
+    background: #fff;
+    border: 1px solid white;
+    cursor: pointer;
+    position: relative;
+  }
+  input[type=range]::-webkit-slider-thumb::before{
+    content: '';
+    background: red;
+    width: 1px;
+    height: 1px;
+  }
+  input[type=range]::-webkit-slider-runnable-track{
+    height:1px;
+    background: rgb(85, 35, 235);
+    cursor: pointer;
+  } */
+
+  /* 슬라이드 바 */
+  input[type=range] {
+    -webkit-appearance: none;
+    overflow: hidden;
+    width: 100%;
+    height: 10px;
+    background: transparent;
+    cursor: pointer;
+    background: #afa2d542;
+    border-radius: 0; /* iOS */
+  }
+  
+  input[type=range]:focus {
+      outline: none;
+  }
+  
+  input[type=range]::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    width: 10px;
+    height: 10px;
+    background: rgb(255, 255, 255);
+    box-shadow: -100vw 0 0 100vw rgb(255, 255, 255);
+    border: 0.1px solid rgb(169, 170, 170);
+
+    cursor: pointer;
+  }
