--- a/javascript/assets/css/music.css
+++ b/javascript/assets/css/music.css
@@ -323,7 +323,7 @@ img.two{
     width: 22px;
 }
 .sourceContMemory_header{
-    background: rgba(71, 42, 177, 0.796);
+    background: #6b697278;
     width: 100%;
     height: 40px;
     backdrop-filter: blur(7px);
@@ -336,7 +336,9 @@ img.two{
 }
 .sourceContMemory_header img{
     filter: invert(1);
+    transform: scale(0.7);
     width: 22px;
+    /* cursor: pointer; */
 }
 .sourceOpen{
     width: 100%;
