--- a/javascript/assets/css/search_copy.css
+++ b/javascript/assets/css/search_copy.css
@@ -112,7 +112,7 @@ li {
 }
 .search__wrap > h1 {
   font-family: "galmuri11";
-  color: #6147b8;
+  color: #45424ecb;
   font-size: 6vw;
   margin-bottom: 10px;
   white-space: nowrap;
@@ -144,7 +144,7 @@ li {
   text-align: right;
   margin-bottom: 20px;
   padding-bottom: 10px;
-  border-bottom: 2px solid var(--htmlColor);
+  border-bottom: 1px solid #6b69721c;
 }
 
 .search__info.center{
@@ -409,12 +409,13 @@ li {
   text-align: center;
   /* border-radius: 50%; */
   margin: 0 auto;
-  background: #6147b8;
+  background: #45424ecb;
 }
 .search__wrap .time span {
   color: #fff;
   font-size: 34px;
-  font-weight: 100;
+  font-weight: bold;
+  text-shadow: 0px 4px #000;
 }
 .search__wrap .desc{
   margin-bottom: 20px;
@@ -425,13 +426,14 @@ li {
   bottom: 0;
   top: 0;
   transform: translateX(-50%);
-  background: #6046b7;
+  background: #6b6972;
   color: #fff;
   cursor: pointer;
   padding: 5px;
   width: 100%;
   font-size: 20px;
   margin-top: 20px;
+  line-height: 1.7;
 }
 
 .search__box input {
@@ -445,12 +447,12 @@ li {
 }
 
 .search__answers {
-  border-bottom: 2px dashed var(--htmlColor);
+  border-bottom: 1px dashed #6b69723d;
   padding-bottom: 40px;
 }
 .search__answers span {
   display: inline-block;
-  background: #6147b8;
+  background: #f84a81;
   padding: 10px 20px;
   color: #fff;
   /* border-radius: 30px; */
@@ -458,7 +460,7 @@ li {
 }
 .search__missAnswers {
   border-bottom: 1px solid #e8e9f1;
-  padding: 40px 0;
+  padding: 30px 0;
 }
 .search__missAnswers span {
   display: inline-block;
@@ -639,14 +641,16 @@ li {
 .sourceContWord{
   display: none;
   width: 50vw;
-  height: 50vh;
+  height: 70vh;
   position: absolute;
   top: 25%;
   left: 25%;
   z-index: 11;
+  overflow: hidden;
+  box-shadow: 0px 50px 40px 5px #00000054;
 }
 .sourceContWord_header{
-  background: rgba(71, 42, 177, 0.796);
+  background: #45424ecb;
   width: 100%;
   height: 40px;
   backdrop-filter: blur(7px);
@@ -659,6 +663,7 @@ li {
 }
 .sourceContWord_header img{
   filter: invert(1);
+  transform: scale(0.7);
   width: 22px;
 }
 .sourceOpen{
