--- a/javascript/assets/css/game.css
+++ b/javascript/assets/css/game.css
@@ -22,9 +22,10 @@ body {
     align-items: center;
     justify-content: space-between;
     padding: 0 10px;
-    background-color: #45424ecb;
+    background-color: #1f2645;
     backdrop-filter: blur(15px);
-    height: 40px;
+    height: 36px;
+    border-bottom: 1px solid #ffffff2e;
 }
 #header img{
     width: 15px;
@@ -41,6 +42,7 @@ body {
 }
 #header .time{
     color: #fff;
+    font-size: 14px;
 }
 .header_icon_cont{
     display: flex;
@@ -63,7 +65,7 @@ body {
     position: fixed;
     left: 0;
     bottom: 0;
-    background-color: #272949ad;
+    background-color: #1f2645;
     backdrop-filter: blur(5px);
     display: flex;
     align-items: center;
