--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,9 @@
 /* ==================================================
    Info Block
 ================================================== */
+*{
+  font-family: 'LINESeedKR';
+}
 .info-block {
   border-left: 4px solid #de5e60;
   overflow: hidden;
@@ -445,12 +448,32 @@
   padding: 35px 0;
   font-family: "Gaegu", cursive;
   font-size: 40px;
+  background: #f1f3f9;
 }
 #contents_tit p a {
   color: #23213b;
-  font-size: 37px;
-  font-weight: bold;
+  font-size: 30px;
+  font-weight: 400;
+  position: relative;
 }
+#contents_tit p a::before,
+#contents_tit p a::after{
+  content: '';
+  position: absolute;
+}
+
+#contents_tit p a::after,
+#contents_tit p a::before{
+    width: 40px;
+    height: 1px;
+    background: #000;
+    transform: translate(0, -50%);
+    top: 50%;
+}
+#contents_tit p a::after{left: -50px;}
+#contents_tit p a::before{right: -50px;}
+#contents_tit p a::after{background: linear-gradient(270deg, black, transparent);}
+#contents_tit p a::before{background: linear-gradient(90deg, black, transparent);}
 
 /* nav_container */
 #navv {
@@ -519,12 +542,15 @@
 /* design_tit */
 .gridly {
   text-align: center;
-  padding: 25px 0;
+  padding: 12px 0;
 }
 .gridly ul {
   overflow: hidden;
-  padding-left: 18px;
-  margin-bottom: 2px;
+  margin: 0 auto;
+  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 .gridly ul.le {
   padding-left: 12px;
@@ -539,12 +565,20 @@
   display: block;
   margin-right: 20px;
 }
+.gridly li:first-child a{
+  font-weight: bold;
+}
 
 .gridly .webstandard a {
-  color: #4c3dff;
+  color: #fb2359 !important;
   display: block;
-  border-bottom: 1px solid #4c3dff;
-  margin-right: 20px;
+  border-right: 0.1px solid #0000001c;
+  margin-right: 10px;
+  padding-right: 10px;
+  font-weight: 500;
+}
+.filter li:last-child a{
+  border-right: none;
 }
 .gridly .html5 a {
   color: #8432c4;
@@ -595,10 +629,22 @@
 }
 
 .image-wrap img {
-  width: 55%;
+  width: 100%;
   padding-top: 70px;
   display: block;
   margin: 0 auto;
+  position: absolute;
+  z-index: -1;
+  left: 60px;
+  top: 98px;
+}
+.image-wrap:hover{
+  transform: scale(1.05);
+  transition: 0.25s;
+}
+.image-wrap:not(:hover){
+  transition: 0.25s;
+
 }
 
 .image-wrap .hover-wrap {
@@ -645,18 +691,18 @@ overlay-text-thumb {
   position: absolute;
   width: 100%;
   height: 100%;
-  background: #2c2b3eaf;
+  background: linear-gradient(29deg, #7e063f, #000000d9);
   backdrop-filter: blur(10px);
-  -webkit-backdrop-filter: blur(10px);
-  color: #ffffff;
-  font-size: 25px;
-  font-weight: 300;
+  color: rgb(255, 255, 255);
+  font-size: 40px;
+  text-shadow: rgba(255, 255, 255, 0.41) 0px 4px 2px;
   line-height: 32px;
   text-transform: uppercase;
   text-align: center;
-  padding-top: 130px;
+  padding-top: 96px;
+  font-weight: bold;
   opacity: 1;
-  filter: alpha(opacity=100);
+  -webkit-text-stroke: 2px;
 }
 
 .image-wrap .hover-wrap .overlay-img-donut.black {
@@ -680,7 +726,6 @@ overlay-text-thumb {
 }
 
 .image-wrap .hover-wrap .overlay-text-thumb-donut.bts {
-  background: #23213c;
   color: #fff;
   width: auto;
   left: 50%;
@@ -694,12 +739,13 @@ overlay-text-thumb {
   white-space: nowrap;
   font-weight: normal;
   font-size: 20px;
+  border: 1px solid #ffffff17;
 }
 .image-wrap .hover-wrap .overlay-text-thumb-donut.bts:hover {
-  background: #3c33b1;
+  background: #fb2359;
 }
 .image-wrap .hover-wrap .overlay-text-thumb1-donut.bts {
-  background: #23213c;
+  background: #19010cb8;
   color: #fff;
   width: auto;
   left: 50%;
@@ -710,9 +756,10 @@ overlay-text-thumb {
   border-radius: 50px;
   line-height: 1;
   height: auto;
+  border: 0.1px solid rgb(255 255 255 / 14%);
 }
 .image-wrap .hover-wrap .overlay-text-thumb1-donut.bts:hover {
-  background: #3c33b1;
+  background: #fb265b;
 }
 
 .image-wrap .hover-wrap .overlay-text-thumb1-donut {
@@ -2195,17 +2242,24 @@ overlay-text-thumb {
 }
 
 .donutImg {
-  text-align: center;
+  text-align: left;
+  margin-top: 30px;
+  margin-left: 30px;
 }
 .donutImg h5 {
-  color: #695eeb;
-  font-size: 23px;
-  padding-top: 22px;
+  color: #393940;
+  font-size: 36px;
   text-transform: uppercase;
+  font-weight: bold;
+  text-shadow: 0px 4px #0000002b;
+  -webkit-text-stroke: 1.5px;
+  word-break: normal;
+  line-height: 1;
 }
 .donutImg p {
   color: #565656;
   font-size: 18px;
+  font-weight: 500;
 }
 .donutImg span {
   color: #999;
@@ -2579,4 +2633,57 @@ overlay-text-thumb {
 }
 .control h3 {
   margin-top: 30px;
+}
+
+
+/* 개인 커스텀 */
+div#options{
+  position: fixed;
+  z-index: 1111;
+  left: 50%;
+  transform: translate( -50%,0);
+  bottom: 0;
+  width: 100%;
+  background: linear-gradient(0deg, white, transparent);
+  -webkit-backdrop-filter: blur(5px);
+}
+
+div#options ul li a{
+  /* color: #fff; */
+  line-height: 1;
+}
+div#customizing{
+  margin-top: 70px;
+}
+
+.all_info{
+  display: inline-flex;
+  justify-content: center;
+  height: 13px;
+  line-height: 1;
+  margin-bottom: 10px;
+  background: #fb2e62;
+  border-radius: 100px;
+  padding: 5px 10px;
+  /* color: #fff; */
+}
+.all_info span{
+  color: #fff;
+  text-align: center;
+  font-size: 12px;
+}
+.all_info span:nth-child(1){
+  padding-right: 10px;
+  border-right: 1px solid #ffffff4a;
+  margin-right: 10px;
+}
+
+@media (max-width: 767px){
+  div#options{
+    width: 100%;
+  }
+  .gridly ul{
+    display: flex;
+    overflow-x: scroll;
+  }
 }
