--- a/javascript/assets/css/memory.css
+++ b/javascript/assets/css/memory.css
@@ -38,7 +38,7 @@
 }
 .memory_end,
 .memory_begin{
-  background: #333b5ced;
+  background: #1e2645c2;
   width: 100%;
   height: 100%;
   position: absolute;
@@ -53,6 +53,10 @@
   justify-content: center;
   border: 11px solid #ffffff26;
   transition: transform 0.5s;
+}
+.memory_end{
+  background: #e8a91ecc !important;
+
 }
 .memory_end p,
 .memory_begin p{
@@ -84,10 +88,26 @@
   transition: 0.25s;
 
 }
-.memory_end li,
+
 .memory_begin li{
   color: #fff;
   padding-bottom: 10px;
+  text-align: center;
+}
+.memory_end ul{
+  margin-bottom: 10px;
+}
+.memory_end li{
+  text-align: center;
+  color: #fff;
+}
+.end_point{
+  font-size: 32px;
+  font-weight: bold;
+  text-shadow: 0px 12px rgba(255, 255, 255, 0.539);
+}
+.isUrPoint{
+  margin-bottom: 30px;
 }
 .memory__card .cards {
     /* gap: 10px; */
